# osmium-webapi

./: Cargo.toml  Justfile  README.md
src/: controllers.rs  error.rs  main.rs  models.rs  utils.rs
src/controllers/: auth.rs  info.rs  payment.rs  recover.rs  register.rs  user.rs
src/models/: auth.rs  entry.rs  recover.rs
